# CTSSP

./: .gitignore
lab1/: CMakeLists.txt  README.md
lab1/stage0/: CMakeLists.txt  circle.cpp  cube.cpp  cylinder.cpp
lab1/stage1/: CMakeLists.txt  torus.cpp
lab1/stage2/: CMakeLists.txt  knot.stl  model.cpp
lab2/: CMakeLists.txt  README.md
lab2/.cache/clangd/index/: main.cpp.E8A005D68EF924E6.idx
lab2/src/: main.cpp
lab3/: CMakeLists.txt  README.md
lab3/src/: hyperelasticity.py  main.cpp  mesh.h5  msh_to_xdmf.py
